syntax = "proto3";

message AttractionEvent {
    enum Action {
        CREATED = 0;
        UPDATED = 1;
        DELETED = 2;
        LICENSE_ADDED = 3;
    }
    string type_name = 1;
    string name = 2;
    string location = 3;
    string partner_id = 4;
    string link_to_attraction_domain = 5;
    string work_status = 6;
    string id = 7;
    Action action = 8;
}